--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8">
@@ -26,4 +26,100 @@
     </body>
     <script src="https://cdn.socket.io/socket.io-3.0.1.min.js"></script>
     <script src="js/script.js"></script>
+</html> -->
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <title>Video Chat App</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.7.3/socket.io.js"></script>
+    <link href="css/style.css" rel="stylesheet" />
+    <style>
+      body {
+        font-family: Arial, sans-serif;
+      }
+      #video-chat-form {
+        background-color: #10b4fa;
+        padding: 20px;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        border-radius: 5px;
+        margin-bottom: 20px;
+      }
+
+      #video-chat-form input[type="text"] {
+        padding: 10px;
+        margin: 30px;
+        width: 100%;
+        border-radius: 5px;
+        align-self: center;
+        border: 1px solid #ccc;
+      }
+
+      #video-chat-form button {
+        padding: 10px 20px;
+        background-color: #4caf50;
+        color: white;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+      }
+
+      #video-chat-rooms {
+        display: flex;
+        justify-content: space-around;
+      }
+
+      #user-video,
+      #peer-video {
+        width: 45%;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+      }
+
+      .btn-group {
+        display: flex;
+        justify-content: center;
+        margin-top: 20px;
+      }
+
+      .btn-group button {
+        padding: 10px 20px;
+        background-color: #4caf50;
+        color: white;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        margin-right: 10px;
+      }
+
+      .text {
+        text-align: center;
+      }
+    </style>
+  </head>
+  <body>
+    <div id="video-chat-form">
+      <h2 class="text">Video Chat App</h2>
+      <input
+        id="roomName"
+        type="text"
+        name="roomName"
+        placeholder="Room Name"
+      />
+      <button id="join">Join</button>
+    </div>
+    <div id="video-chat-rooms">
+      <video id="user-video" autoplay></video>
+      <video id="peer-video" autoplay></video>
+    </div>
+    <div class="btn-group" id="btn-group">
+      <button id="mute-btn">Mute</button>
+      <button id="leave-room-btn">Leave Room</button>
+      <button id="hideCamera">Hide Camera</button>
+    </div>
+  </body>
+  <script src="https://cdn.socket.io/socket.io-3.0.1.min.js"></script>
+  <script src="js/script.js"></script>
 </html>
