fix: double voice issue

--- a/views/meetingRoom.ejs
+++ b/views/meetingRoom.ejs
@@ -107,7 +107,7 @@
       <button id="join">Join</button>
     </div>
     <div id="video-chat-rooms">
-      <video id="user-video" autoplay></video>
+      <video id="user-video" autoplay muted></video>
       <video id="peer-video" autoplay></video>
     </div>
     <div class="btn-group" id="btn-group">
