--- a/views/chatpage.ejs
+++ b/views/chatpage.ejs
@@ -134,7 +134,7 @@
     </div>
     <div class="container">
       <ul id="messages"></ul>
-      <form action="/" method="POST" id="chatForm">
+      <form id="chatForm">
         <input
           id="txt"
           autocomplete="off"
@@ -144,7 +144,7 @@
         /><button>Send</button>
       </form>
     </div>
-    <script src="../../socket.io/socket.io.js"></script>
+    <script src="https://cdn.socket.io/socket.io-3.0.1.min.js"></script>
     <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
     <script>
       var socket = io();
