--- a/views/chatpage.ejs
+++ b/views/chatpage.ejs
@@ -1,175 +1,173 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Global Chat</title>
-    <style>
-      * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-      }
+<head>
+  <title>Global Chat</title>
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
 
-      body {
-        font: 13px Helvetica, Arial;
-      }
+    body {
+      font: 13px Helvetica, Arial;
+    }
 
-      .container {
-        margin-top: 50px;
-        height: calc(100vh - 110px);
-        overflow-y: auto;
-      }
+    .container {
+      margin-top: 50px;
+      height: calc(100vh - 110px);
+      overflow-y: auto;
+    }
 
-      form {
-        background: #fff;
-        padding: 10px;
-        border-top: 1px solid #ccc;
-        position: fixed;
-        bottom: 0;
-        width: 100%;
-        display: flex;
-        align-items: center; /* Align items vertically center */
-      }
+    form {
+      background: #fff;
+      padding: 10px;
+      border-top: 1px solid #ccc;
+      position: fixed;
+      bottom: 0;
+      width: 100%;
+      display: flex;
+      align-items: center;
+    }
 
-      form input {
-        border: 1px solid #ccc;
-        padding: 10px;
-        flex: 1; /* Take remaining space */
-        margin-right: 10px;
-      }
+    form input {
+      border: 1px solid #ccc;
+      padding: 10px;
+      flex: 1;
+      margin-right: 10px;
+    }
 
-      form button {
-        background: rgb(130, 224, 255);
-        border: none;
-        padding: 10px 20px;
-        cursor: pointer;
-        border-radius: 5px; /* Add border radius */
-      }
+    form button {
+      background: rgb(130, 224, 255);
+      border: none;
+      padding: 10px 20px;
+      cursor: pointer;
+      border-radius: 5px;
+    }
 
-      button:hover {
-        background-color: #6cc3ff; /* Lighten the background color on hover */
-        color: white;
-      }
+    button:hover {
+      background-color: #6cc3ff;
+      color: white;
+    }
 
-      #messages {
-        list-style-type: none;
-        margin: 0;
-        padding: 0;
-        padding-top: 50px; /* Add top padding to prevent chats from going behind the navbar */
-      }
+    #messages {
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+      padding-top: 50px;
+    }
 
-      #messages li {
-        padding: 10px;
-      }
+    #messages li {
+      padding: 10px;
+    }
 
-      #messages li:nth-child(odd) {
-        background: #f1f1f1;
-      }
+    #messages li:nth-child(odd) {
+      background: #f1f1f1;
+    }
 
-      #txt {
-        border-radius: 5px;
-      }
+    #txt {
+      border-radius: 5px;
+    }
 
-      .navbar {
-        width: 100%;
-        background-color: #333;
-        overflow: hidden;
-        position: fixed; /* Fix the navbar position */
-        top: 0;
-        left: 0;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding: 0 20px; /* Add some padding for spacing */
-        box-sizing: border-box;
-      }
+    .navbar {
+      width: 100%;
+      background-color: #333;
+      overflow: hidden;
+      position: fixed;
+      top: 0;
+      left: 0;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 0 20px;
+      box-sizing: border-box;
+    }
 
-      .active {
-        text-decoration: none;
-        background-color: #ddd;
-        color: black;
-      }
+    .active {
+      text-decoration: none;
+      background-color: #ddd;
+      color: black;
+    }
 
-      .navbar a {
-        display: block;
-        text-align: center;
-        padding: 14px 20px;
-        text-decoration: none;
-        color: white;
-      }
+    .navbar a {
+      display: block;
+      text-align: center;
+      padding: 14px 20px;
+      text-decoration: none;
+      color: white;
+    }
 
-      .navbar a:hover {
-        background-color: #ddd;
-        color: black;
-      }
+    .navbar a:hover {
+      background-color: #ddd;
+      color: black;
+    }
 
-      .logout-btn {
-        padding: 10px 20px;
-        border: none;
-        border-radius: 5px;
-        background-color: #dc3545;
-        color: white;
-        cursor: pointer;
-        font-size: 16px;
-      }
+    .logout-btn {
+      padding: 10px 20px;
+      border: none;
+      border-radius: 5px;
+      background-color: #dc3545;
+      color: white;
+      cursor: pointer;
+      font-size: 16px;
+    }
 
-      .logout-btn a {
-        text-decoration: none;
-        color: white;
-      }
+    .logout-btn a {
+      text-decoration: none;
+      color: white;
+    }
 
-      .logout-btn:hover {
-        background-color: #c82333;
-      }
-    </style>
-  </head>
-  <body>
-    <div class="navbar">
-      <div class="row">
-        <a href="/home">Home</a>
-        <a href="/chat" class="active" style="color: black">Chat</a>
-      </div>
-      <button class="logout-btn">
-        <a href="/logout">Logout</a>
-      </button>
+    .logout-btn:hover {
+      background-color: #c82333;
+    }
+  </style>
+</head>
+<body>
+  <div class="navbar">
+    <div class="row">
+      <a href="/home">Home</a>
+      <a href="/chat" class="active" style="color: black">Chat</a>
     </div>
-    <div class="container">
-      <ul id="messages"></ul>
-      <form id="chatForm">
-        <input
-          id="txt"
-          autocomplete="off"
-          autofocus="on"
-          oninput="isTyping()"
-          placeholder="Type your message here..."
-        /><button>Send</button>
-      </form>
-    </div>
-    <script src="https://cdn.socket.io/socket.io-3.0.1.min.js"></script>
-    <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
-    <script>
-      var socket = io();
+    <button class="logout-btn">
+      <a href="/logout">Logout</a>
+    </button>
+  </div>
+  <div class="container">
+    <ul id="messages"></ul>
+    <form id="chatForm">
+      <input id="txt" autocomplete="off" autofocus="on" oninput="isTyping()" placeholder="Type your message here..." />
+      <button>Send</button>
+    </form>
+  </div>
+  <script src="https://cdn.socket.io/socket.io-3.0.1.min.js"></script>
+  <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+  <script>
+    var socket = io();
+    var username = "<%= username %>";
 
-      function isTyping() {
-        socket.emit("typing", username);
-      }
+    socket.emit("username", username);
 
-      $("form").submit(function (e) {
-        e.preventDefault();
-        socket.emit("chat_message", $("#txt").val());
+    function isTyping() {
+      socket.emit("typing", username);
+    }
+
+    $("#chatForm").submit(function(e) {
+      e.preventDefault();
+      var message = $("#txt").val();
+      if (message.trim()) {
+        socket.emit("chat_message", message);
         $("#txt").val("");
-        return false;
-      });
+      }
+      return false;
+    });
 
-      socket.on("chat_message", function (msg) {
-        $("#messages").append($("<li>").html(msg));
-      });
+    socket.on("chat_message", function(msg) {
+      $("#messages").append($("<li>").html(msg));
+    });
 
-      socket.on("is_online", function (username) {
-        $("#messages").append($("<li>").html(username));
-      });
-
-      var username = "<%= username %>";
-      socket.emit("username", username);
-    </script>
-  </body>
+    socket.on("is_online", function(username) {
+      $("#messages").append($("<li>").html(username));
+    });
+  </script>
+</body>
 </html>
