--- a/views/chatpage.ejs
+++ b/views/chatpage.ejs
@@ -140,7 +140,7 @@
     </form>
   </div>
   <script src="https://cdn.socket.io/socket.io-3.0.1.min.js"></script>
-  <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+  <script src="https://code.jquery.com/jquery-1.10.1.min.js"></script>
   <script>
     var socket = io();
     var username = "<%= username %>";
