feat: added favicon

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Video Meeting</title>
+    <link rel="icon" type="image/x-icon" href="https://img.icons8.com/?size=100&id=YOhdE1LDn243&format=png&color=000000">
     <style>
       /* styles.css */
       body {
