--- a/views/chatpage.ejs
+++ b/views/chatpage.ejs
@@ -2,6 +2,8 @@
 <html>
 <head>
   <title>Global Chat</title>
+  
+  <link rel="icon" type="image/x-icon" href="https://img.icons8.com/?size=100&id=YOhdE1LDn243&format=png&color=000000">
   <style>
     * {
       margin: 0;
