--- a/views/layouts/header.ejs
+++ b/views/layouts/header.ejs
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>SyncMate</title>
+    <link rel="icon" type="image/x-icon" href="https://img.icons8.com/?size=100&id=YOhdE1LDn243&format=png&color=000000">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="/css/materialize.min.css">
